Revert "1.20.4 update (#4249)"
This reverts commit b0a927bafc077e9850d6a0d87710ff194c0ac7d4.