@@ -13,10 +13,11 @@ import meteordevelopment.meteorclient.gui.GuiThemes;
 import meteordevelopment.meteorclient.gui.screens.CommitsScreen;
 import meteordevelopment.meteorclient.utils.network.Http;
 import meteordevelopment.meteorclient.utils.network.MeteorExecutor;
+import meteordevelopment.meteorclient.utils.render.color.Color;
+import net.minecraft.client.font.TextRenderer;
 import net.minecraft.client.gui.DrawContext;
-import net.minecraft.text.MutableText;
-import net.minecraft.text.Text;
-import net.minecraft.util.Formatting;
+import net.minecraft.client.render.BufferBuilder;
+import net.minecraft.client.render.VertexConsumerProvider;
 
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -24,7 +25,11 @@ import java.util.List;
 
 import static meteordevelopment.meteorclient.MeteorClient.mc;
 
-public abstract class TitleScreenCredits {
+public class TitleScreenCredits {
+    private static final int WHITE = Color.fromRGBA(255, 255, 255, 255);
+    private static final int GRAY = Color.fromRGBA(175, 175, 175, 255);
+    private static final int RED = Color.fromRGBA(225, 25, 25, 255);
+
     private static final List<Credit> credits = new ArrayList<>();
 
     private static void init() {
@@ -33,7 +38,7 @@ public abstract class TitleScreenCredits {
         for (MeteorAddon addon : AddonManager.ADDONS) add(addon);
 
         // Sort by width (Meteor always first)
-        credits.sort(Comparator.comparingInt(value -> value.addon == MeteorClient.ADDON ? Integer.MIN_VALUE : -mc.textRenderer.getWidth(value.text)));
+        credits.sort(Comparator.comparingInt(value -> value.sections.get(0).text.equals("Meteor Client ") ? Integer.MIN_VALUE : -value.width));
 
         // Check for latest commits
         MeteorExecutor.execute(() -> {
@@ -41,10 +46,13 @@ public abstract class TitleScreenCredits {
                 if (credit.addon.getRepo() == null || credit.addon.getCommit() == null) continue;
 
                 GithubRepo repo = credit.addon.getRepo();
-                Response res = Http.get("https://api.github.com/repos/%s/branches/%s".formatted(repo.getOwnerName(), repo.branch())).sendJson(Response.class);
+                Response res = Http.get(String.format("https://api.github.com/repos/%s/branches/%s", repo.getOwnerName(), repo.branch())).sendJson(Response.class);
 
                 if (res != null && !credit.addon.getCommit().equals(res.commit.sha)) {
-                    credit.text.append(Text.literal("*").formatted(Formatting.RED));
+                    synchronized (credit.sections) {
+                        credit.sections.add(1, new Section("*", RED));
+                        credit.calculateWidth();
+                    }
                 }
             }
         });
@@ -53,17 +61,18 @@ public abstract class TitleScreenCredits {
     private static void add(MeteorAddon addon) {
         Credit credit = new Credit(addon);
 
-        credit.text.append(Text.literal(addon.name).styled(style -> style.withColor(addon.color.getPacked())));
-        credit.text.append(Text.literal(" by ").formatted(Formatting.GRAY));
+        credit.sections.add(new Section(addon.name, addon.color.getPacked()));
+        credit.sections.add(new Section(" by ", GRAY));
 
         for (int i = 0; i < addon.authors.length; i++) {
             if (i > 0) {
-                credit.text.append(Text.literal(i == addon.authors.length - 1 ? " & " : ", ").formatted(Formatting.GRAY));
+                credit.sections.add(new Section(i == addon.authors.length - 1 ? " & " : ", ", GRAY));
             }
 
-            credit.text.append(Text.literal(addon.authors[i]).formatted(Formatting.WHITE));
+            credit.sections.add(new Section(addon.authors[i], WHITE));
         }
 
+        credit.calculateWidth();
         credits.add(credit);
     }
 
@@ -72,9 +81,14 @@ public abstract class TitleScreenCredits {
 
         int y = 3;
         for (Credit credit : credits) {
-            int x = mc.currentScreen.width - 3 - mc.textRenderer.getWidth(credit.text);
+            int x = mc.currentScreen.width - 3 - credit.width;
 
-            context.drawTextWithShadow(mc.textRenderer, credit.text, x, y, -1);
+            synchronized (credit.sections) {
+                for (Section section : credit.sections) {
+                    context.drawTextWithShadow(mc.textRenderer, section.text, x, y, section.color);
+                    x += section.width;
+                }
+            }
 
             y += mc.textRenderer.fontHeight + 2;
         }
@@ -83,9 +97,9 @@ public abstract class TitleScreenCredits {
     public static boolean onClicked(double mouseX, double mouseY) {
         int y = 3;
         for (Credit credit : credits) {
-            int x = mc.currentScreen.width - 3 - mc.textRenderer.getWidth(credit.text);
+            int x = mc.currentScreen.width - 3 - credit.width;
 
-            if (mouseX >= x && mouseX <= x + mc.textRenderer.getWidth(credit.text) && mouseY >= y && mouseY <= y + mc.textRenderer.fontHeight + 2) {
+            if (mouseX >= x && mouseX <= x + credit.width && mouseY >= y && mouseY <= y + mc.textRenderer.fontHeight + 2) {
                 if (credit.addon.getRepo() != null && credit.addon.getCommit() != null) {
                     mc.setScreen(new CommitsScreen(GuiThemes.get(), credit.addon));
                     return true;
@@ -100,10 +114,27 @@ public abstract class TitleScreenCredits {
 
     private static class Credit {
         public final MeteorAddon addon;
-        public final MutableText text = Text.empty();
+        public final List<Section> sections = new ArrayList<>();
+        public int width;
 
         public Credit(MeteorAddon addon) {
             this.addon = addon;
+        }
+
+        public void calculateWidth() {
+            width = 0;
+            for (Section section : sections) width += section.width;
+        }
+    }
+
+    private static class Section {
+        public final String text;
+        public final int color, width;
+
+        public Section(String text, int color) {
+            this.text = text;
+            this.color = color;
+            this.width = mc.textRenderer.getWidth(text);
         }
     }
 
